--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Exoct";
-  src: url("https://assets.codepen.io/1480814/films.EXH_____.ttf")
+  src: url("./films.EXH_____.ttf")
 }
 figure {
   width: 100%;
